# particle_sim

./: Cargo.toml
assets/sets/natural/: bedrock.splang
assets/shaders/: opaque.wgsl
src/: atom_physics.rs  main.rs  physics.rs  player.rs  terrain.rs  ui.rs
src/atom_physics/: element.rs  id.rs  inspector.rs  io.rs  value.rs
src/atom_physics/io/: diagnostics.rs  parsing.rs
src/atom_physics/io/parsing/: ast.rs  ast_evaluation.rs  ast_generation.rs  tokenizer.rs
src/physics/: colliders.rs
src/player/: bindings.rs  building.rs  inspector.rs  physics.rs  rendering.rs
src/terrain/: change_detection.rs  color.rs  editing.rs  rendering.rs  storage.rs  thread.rs
src/terrain/rendering/: mesh_gen.rs
src/terrain/rendering/mesh_gen/: inspector.rs
src/terrain/storage/: array3d.rs
